
Version 0.5.4 -- 25 July 2007
------------------------------------------------------------------------
19 July 2007
+ Fulfilled request to change "edit" to "edit page"

8 June 2007
+ Updated locale.

6 June 2007
+ RFE #1690681 - Added permissions link on volume list view.
+ RFE #1719299 - Page titles added to volume tabs.

Version 0.5.3
------------------------------------------------------------------------
15 May 2007
+ Error catch added to page template pull.
+ Updated files: conf/error.php

Version 0.5.2
------------------------------------------------------------------------
12 April 2007
+ Updated image manager function call
+ Added translation to image label.
+ Updated files: templates/forms/edit_page.tpl

5 April 2007
+ Added translation functions.
+ Added German translation files.

2 April 2007
+ Removed page and volume links from titles.

Version 0.5.1
------------------------------------------------------------------------
6 March 2007
+ Added 'select option' to drop down menu on page listing (FR#1674326)

5 March 2007
+ Changed control panel icon
+ Updated created_user_id for converted pages
+ Requesting a restricted page forwards user to the login screen.

Version 0.5.0 (merged svn versions > 0.2.6)
------------------------------------------------------------------------
26 February 2007
+ Fixed reference problem occuring in PHP 4
+ Made volume and page titles linked

23 February 2007
+ Removed the links that let you move pages around. Changed to a
  single "sort" link that takes you to the overview page.

21 February 2007
+ Page count performed before offering page move options.

19 February 2007
+ Added translate functions

14 February 2007
+ Removed table format from edit form
+ Updated files: templates/forms/edit_page.tpl, templates/forms/edit.tpl

12 February 2007
+ Added ability to move pages
+ Added Feature ability
+ Indexed page and volume table
+ Added Feature permission
+ Fixed some bugs with admin options
+ Fixed submitting an empty command