@@ -1,6 +1,8 @@
-
 Version 0.5.4 -- 25 July 2007
 ------------------------------------------------------------------------
+7 Aug 2007
++ Pages placed on site front page do not alter meta title.
+
 19 July 2007
 + Fulfilled request to change "edit" to "edit page"
 
